<resources>
    <string name="app_name">Tricot</string>
    <string name="action_settings">Settings</string>

    //Global
    <string name="delete">Supprimer</string>
    <string name="update">Modifier</string>
    <string name="save">Enregistrer</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="warning">Attention</string>
    <string name="add">Ajouter</string>

    //Menu
    <string name="how_it_works">• Comment ça marche ?</string>
    <string name="my_stats">• Mes stats</string>
    <string name="infos">• Informations</string>
    <string name="demos">• Démos</string>

    //Tutos
    <string name="how_it_works_title">Comment ça marche ?</string>
    <string name="tuto1">Ici, tu trouveras tous tes projets. Pour en ajouter, il suffit de cliquer sur +.</string>
    <string name="tuto2">Au click sur un de tes projets, tu retrouveras les différents étapes de ton ouvrage. Pour en ajouter, il te suffit de cliquer sur +.</string>
    <string name="tuto3">Au click sur une des étapes, tu retrouves le rang en cours. Tu peux y associer les différents points en cliquant sur +.</string>
    <string name="tuto4">Maintenant que tout est prêt, il ne te reste plus qu\'à incrémenter ton compteur pour savoir quels points sont concernés par ce rang.</string>

    //Info
    <string name="infos_titles">Informations</string>
    <string name="version" >• Version</string>
    <string name="realisation">• Réalisation</string>
    <string name="libraries_used">Librairies utilisées</string>
    <string name="mc">Marie-Cécile Trégouët</string>
    <string name="contact">• Contact</string>
    <string name="contact_message">Une remarque ? Un soucis ? Bougez votre téléphone.\nPour comprendre, cliquez ici !</string>

    //Demos
    <string name="demos_title">Démos</string>
    <string name="demos_text">Le fonctionnement n\'est toujours pas clair, ou vous voulez un petit projet pour tester l\'application ? Je vous propose ce petit tuto pour réaliser un headband. Pour l\'ajouter à l\'application, cliquez sur le bouton ci-dessous.</string>
    <string name="demos_button">Ajouter le projet</string>

    //Stats
    <string name="my_profile">Mon profil</string>
    <string name="ranks_number_title">Nombre de rangs</string>
    <string name="ranks_number_message">Tu as tricoté %d rangs au total! Bravo! Continue de tricoter comme ça !</string>
    <string name="ranks_number_0">Aucun rang? Allez! C\'est l\'heure de passer à l\'action</string>
    <string name="ranks_number_10">Pas mal ! Tu as tricoté %d rangs. Il faut passez à la vitesse supérieure maintenant !</string>

    //Home
    <string name="my_rules">Mes points</string>
    <string name="current">En cours</string>
    <string name="project_title">Projet : </string>
    <string name="step_title">Étape : </string>
    <string name="current_rank_title">Rang en cours : </string>

    Home Welcome
    <string name="welcome_title">Bienvenue</string>
    <string name="ready_to_knit">Prêt(e) à tricoter ?</string>

    //Main
    <string name="my_projects">Mes projets</string>
    <string name="ranks_number">%d rangs</string>
    <string name="rank_number">%d rang</string>
    <string name="new_project">Nouveau projet</string>
    <string name="edit_project">Éditer le projet</string>
    <string name="storage_permission_rationale_title">Permissions</string>
    <string name="storage_permition_rationale_message">Accepter ?</string>
    <string name="storage_permission_denied_message">Vous n\'avez pas accepté les permissions</string>
    <string name="popup_message_title">Oups</string>
    <string name="popup_message_text">Ce projet est déjà sur l\'application</string>
    <string name="popup_message_title_confirmation">Bravo</string>
    <string name="popup_message_text_confirmation">Le projet a été ajouté !</string>

    //Popup add project
    <string name="name_project">Nom du projet</string>
    <string name="write_project_name">Nom du projet</string>

    //Project
    <string name="steps_project">Etapes du projet</string>

    //Popup add step
    <string name="step_name">Nom de l\'étape</string>
    <string name="write_step_name">Entrez le nom de l\'étape</string>
    <string name="write_description">Entre la description de l\'étape</string>
    <string name="length">Longueur : </string>
    <string name="length_example">10rangs, 10cm, etc...</string>

    //Step
    <string name="current_rank">Rang en cours</string>
    <string name="rank_specialities">Spécificité du rang</string>
    <string name="step">Étape : %s</string>
    <string name="step_length">Longueur de l\'étape : %s</string>
    <string name="frequence_ranks">%d rangs</string>
    <string name="rule_list">• %s</string>
    <string name="here_to_add_project">Clique ici pour\najouter un projet !</string>
    <string name="here_to_add_step">Clique ici pour\najouter une étape !</string>
    <string name="description">Description</string>
    <string name="frequence_description">Tous les %s rangs, à partir du rang %s</string>
    <string name="reduction_title">Augmentation / Diminution</string>
    <string name="stitches_used">Points utilisés</string>

    //Project popup
    <string name="delete_project_confirmation">Voulez-vous vraiment supprimer ce projet ?</string>

    //Stitch popup
    <string name="new_stitch">Nouveau point</string>
    <string name="stitch_to_add">Nom du point à rajouter</string>
    <string name="stitch_frequency">Fréquence du point</string>
    <string name="stitch_frequency_example">ex: 10</string>
    <string name="rank_change">Rang concerné par le changement</string>
    <string name="rank_change_example">ex : 3</string>
    <string name="stitch_description">Description du point</string>
    <string name="stitch_description_example">ex: 2m. endroit puis 2m. envers</string>
    <string name="select_a_stitch">Sélectionne un point</string>
    <string name="no_stitch">Bizarre, nous ne trouvons aucun point... Si seulement quelqu\'un pouvait en ajouter en cliquant ici...</string>

    //Reduction popup
    <string name="reduction_popup_title">Diminution</string>
    <string name="begin_with_rank">Commencer au rang...</string>
    <string name="frequency">Fréquence</string>
    <string name="position">Position</string>
    <string name="repeat">Répéter</string>
    <string name="mailles">Mailles</string>
    <string name="side">Côté</string>
    <string name="times_hint">ex:3</string>
    <string name="side_hint">ex:droit</string>


    //Delete
    <string name="stitch_delete_confirmation">Voulez-vous vraiment supprimer ce point ?</string>
    <string name="step_delete_confirmation">Voulez-vous vraiment supprimer cette étape ?</string>

    //Stitch
    <string name="here_to_add_stitch_or_reduction">Clique ici pour\najouter un point ou une diminution !</string>
    <string name="here_to_add_stitch">Clique ici pour\najouter un point !</string>

    //Picture
    <string name="picture_option_title">Que voulez-vous faire ?</string>
    <string name="take_picture">> Prendre une photo</string>
    <string name="choose_picture">> Choisir une photo</string>
    <string name="image_delete_confirmation">Voulez-vous vraiment supprimer cette image ?</string>

</resources>
