<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_rectangle_white"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_stitch"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rule_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_stitch"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/rule_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/stitch_to_add"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete"
        android:lines="1"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/rule_title_label" />

    <TextView
        android:id="@+id/rule_frequence_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stitch_frequency"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rule_title"/>

    <EditText
        android:id="@+id/rule_frequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/stitch_frequency_example"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/rule_frequence_label" />

    <TextView
        android:id="@+id/rule_offset_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rank_change"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rule_frequence"/>

    <EditText
        android:id="@+id/rule_offset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/rank_change_example"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:lines="1"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/rule_offset_label" />

    <TextView
        android:id="@+id/rule_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stitch_description"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rule_offset"/>

    <EditText
        android:id="@+id/rule_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/stitch_description_example"
        android:imeOptions="actionDone"
        android:lines="4"
        android:gravity="start"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/rule_description_label" />

    <LinearLayout
        android:id="@+id/update_rule_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule_description">

        <TextView
            android:id="@+id/delete_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_pink"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/update_rule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_pink"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/validate_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_rectangle_pink"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule_description" />

</android.support.constraint.ConstraintLayout>
