<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_rectangle_white"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_option_title"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textSize="@dimen/title_text_size"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/choose_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_picture"
        android:gravity="left"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/take_picture"
        android:textSize="@dimen/title_text_size"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_picture"
        android:gravity="center"
        android:background="@drawable/shape_rectangle_pink"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

</android.support.constraint.ConstraintLayout>
