<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_rectangle_primary"
    android:padding="20dp">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_message_title"
        style="@style/popupTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/popup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_message_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_title"
        android:textColor="@android:color/white"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/popupButton"
        android:layout_margin="15dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_text"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>
