<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_icon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/how_it_works"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/how_it_works"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/my_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/my_stats"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAllCaps="true"
        android:text="@string/infos"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

</LinearLayout>
